0029974: Visualization - OpenGl_Layer::Render() produces inconsistent state of Polygon Offset settings

OpenGl_Layer::Render() now calls OpenGl_Workspace::SetDefaultPolygonOffset()
for managing default polygon offset settings considering OpenGl_Workspace applied aspect logic.